<resources>
    <string name="app_name">Kanji</string>

    <!-- Title -->
    <string name="home_kanji">家</string>

    <!-- User messages -->
    <string name="room_failure">An issue occurred with the database.\nPlease try again.</string>
    <string name="foreign_key_exception">The selected lesson could not be found.\nPlease try again.</string>
    <string name="room_deletion_failure">An issue occurred, and some items couldn\'t be deleted.\nPlease try again.</string>
    <string name="network_unavailable">Network is currently unavailable.</string>
    <string name="connexion_timeout">Connexion timeout</string>
    <string name="network_failure">A network failure occurred.</string>
    <string name="conversion_error">Conversion error</string>
    <string name="no_matching_translation">No matching translation was found.</string>
    <string name="no_kanji_found">The provided characters don\'t contain any kanji.</string>
    <string name="dictionary_save_successful">Dictionary saved to the downloads directory</string>
    <string name="dictionary_save_failure">An error occurred while downloading the dictionary</string>
    <string name="dictionary_import_successful">Import successful</string>
    <string name="dictionary_import_failure">Import failed. Please try again.</string>
    <string name="format_failure">A formatting error happened. Please try again.</string>

    <!-- Text -->
    <plurals name="translation_count">
        <item quantity="one">%d translation</item>
        <item quantity="other">%d translations</item>
    </plurals>
    <plurals name="item_deletion_count">
        <item quantity="one">Delete %d element from your dictionary?</item>
        <item quantity="other">Delete %d elements from your dictionary?</item>
    </plurals>
    <string name="dictionary_title_default">Dictionary</string>
    <string name="dictionary_title_selection_empty">Select items</string>
    <plurals name="dictionary_title_selection">
        <item quantity="zero">@string/dictionary_title_selection_empty</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="select_lesson">Select a lesson</string>
    <string name="none">None</string>
    <string name="lesson_display">Lesson %1$d - %2$s</string>
    <string name="add_lesson">Add lesson</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_order">Sort order</string>
    <string name="warning_prefilled_fields">Below fields have been pre-filled and can\'t be edited</string>
    <string name="translation_selection">The below translation(s) match your search.\nPlease select the one you were looking for.</string>

    <!-- Button text-->
    <string name="dictionary">Dictionary</string>
    <string name="test">Test</string>
    <string name="learn">Learn</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="search_kanji">Search meaning</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="select_all">All</string>
    <string name="share">Share as PDF</string>
    <string name="import_dictionary">Import dictionary</string>
    <string name="export_dictionary">Export dictionary</string>

    <!-- Label -->
    <string name="translation">Translation</string>
    <string name="romaji">Romaji</string>
    <string name="lesson_number">Lesson number</string>
    <string name="creation_date">Creation date</string>
    <string name="ascending_order">Ascending (A-Z)</string>
    <string name="descending_order">Descending (Z-A)</string>

    <!-- Hint -->
    <string name="search_translation">Search translation</string>
    <string name="lesson_number_hint">Lesson number</string>
    <string name="lesson_label_hint">Lesson label</string>
    <string name="meaning_hint">Meaning(s)</string>
    <string name="romaji_hint">Romaji</string>
    <string name="characters_hint">Characters</string>
    <string name="characters_hint_updating">Characters - Not editable when updating translation</string>
    <string name="alternative_writings_hint">Alternative writings</string>
    <string name="onyomi_hint">On\'yomi reading(s)</string>
    <string name="onyomi_romaji_hint">On\'yomi reading(s) romaji</string>
    <string name="kunyomi_hint">Kun\'yomi reading(s)</string>
    <string name="kunyomi_romaji_hint">Kun\'yomi reading(s) romaji</string>
    <string name="name_readings_hint">Name reading(s)</string>
    <string name="name_readings_romaji_hint">Name reading(s) romaji</string>
    <string name="grade_taught_hint">Grade taught</string>
    <string name="jlpt_level_hint">JLPT level</string>
    <string name="use_frequency_indicator_hint">Use frequency indicator</string>

    <!-- Form error -->
    <string name="lesson_selection_error">Please select a lesson</string>
    <string name="mandatory_field_error">Mandatory field</string>
    <string name="characters_not_fetched_error">Kanji(s) meaning(s) must be fetched</string>
    <string name="digits_only_filling_error">Must contain only digits</string>
    <string name="duplicate_lesson_error">A lesson with this number already exists</string>
    <string name="duplicate_characters_error">A translation with these characters already exists. Would you like to update it?</string>
    <string name="roman_letters_only_filling_error">Must contain only roman letters</string>
    <string name="japanese_characters_only_filling_error">Must contain only kanjis, hiraganas and katakanas</string>
    <string name="no_spaces_allowed_error">Must not contain spaces</string>

    <!-- Content description -->
    <string name="filter_translations">Filter translations</string>
    <string name="sort_translations">Sort translations</string>
    <string name="add_translation">Add translation</string>

</resources>