<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_background"
    android:maxWidth="@dimen/_360sdp"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingTop="@dimen/_20sdp"
    android:paddingBottom="@dimen/_10sdp">

    <TextView
        android:id="@+id/sort_by_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/sort_by_selection_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_text">

        <RadioButton
            android:id="@+id/radio_meaning"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translation" />

        <RadioButton
            android:id="@+id/radio_romaji"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/romaji" />

        <RadioButton
            android:id="@+id/radio_creation_date"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_date" />

    </RadioGroup>

    <TextView
        android:id="@+id/direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sort_order"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by_selection_radio" />

    <RadioGroup
        android:id="@+id/direction_selection_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direction_text">

        <RadioButton
            android:id="@+id/radio_ascending"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending_order" />

        <RadioButton
            android:id="@+id/radio_descending"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending_order" />

    </RadioGroup>

    <Button
        android:id="@+id/dialog_cancel_button"
        style="@style/FormActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/dialog_done_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direction_selection_radio" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/dialog_cancel_button"
        app:layout_constraintEnd_toStartOf="@id/dialog_cancel_button"
        app:layout_constraintStart_toEndOf="@id/dialog_done_button"
        app:layout_constraintTop_toTopOf="@id/dialog_cancel_button" />

    <Button
        android:id="@+id/dialog_done_button"
        style="@style/FormActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/direction_selection_radio" />

</androidx.constraintlayout.widget.ConstraintLayout>