<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="fr.steph.kanji.ui.viewmodel.AddLexemeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.AddLexemeFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/characters_input_layout"
            style="@style/TextInputLayout.FormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/characters_hint"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/characters_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:text="@={viewModel.uiState.characters}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/search_kanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:onClick="@{() -> viewModel.getKanjiInfo(charactersInput.text.toString())}"
            android:text="@string/search_kanji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characters_input_layout"
            app:visibility="@{viewModel.uiState.charactersLoneKanji}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/romaji_input_layout"
            style="@style/TextInputLayout.FormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/romaji_hint"
            app:layout_constraintTop_toBottomOf="@id/search_kanji">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/romaji_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.uiState.romaji}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meaning_input_layout"
            style="@style/TextInputLayout.FormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/meaning_hint"
            app:layout_constraintTop_toBottomOf="@id/romaji_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meaning_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.uiState.meaning}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_cancel"
            style="@style/Button.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_confirm"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_confirm"
            style="@style/Button.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:onClick="@{() -> viewModel.submitData()}"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>