<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.DictionaryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/android:colorBackground"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            app:collapsedTitleGravity="start"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Dictionary"
            app:titleCollapseMode="scale"
            app:toolbarId="@id/dictionary_toolbar"
            tools:title="">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/dictionary_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back" />

            <LinearLayout
                android:id="@+id/expanded_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dictionary"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/translation_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="101 translations" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_collapseMode="pin">

                <Button
                    style="@style/Button.ToolbarActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/filter_translations"
                    app:icon="@drawable/ic_filter" />

                <Button
                    android:id="@+id/search"
                    style="@style/Button.ToolbarActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dictionary_action_button_marginStart"
                    android:contentDescription="@string/search_translation"
                    app:icon="@drawable/ic_search" />

                <Button
                    android:id="@+id/add_lexeme"
                    style="@style/Button.ToolbarActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dictionary_action_button_marginStart"
                    android:contentDescription="@string/add_translation"
                    app:icon="@drawable/ic_add" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_lexeme" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>